infrastructure/local/k8s/alertmanager/alertmanager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: stage-le-issuer
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - alertmanager.example.com
    secretName: alertmanager-secret
  rules:
  - host: alertmanager.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-alertmanager
            port:
              number: 9093
